# proto-engine

./: .gitignore  .gitmodules  CMakeLists.txt  Character.cpp  Character.h  ProtoEngine.sln  ProtoEngine.vcxproj  ProtoEngine.vcxproj.filters  README.md  TestGame.vcxproj  premake5.lua
Include/: ProtoApp.hpp  ProtoEngine.hpp
Source/: Character.cpp  Character.h  HandleInput.cpp  HandleInput.h  HandleInput.hpp  Includes.h  Includes.hpp  Log.cpp  Log.hpp  Main.cpp  Notes.txt  Object.cpp  Object.h  Object.hpp  ProtoApp.cpp  ProtoApp.h  ProtoEngine.cpp  Shader.cpp  Shader.h  Shader.hpp  Text.cpp  Text.h  Text.hpp  Vertex.h  Vertex.hpp  Window.cpp  Window.h  Window.hpp
Source/Shaders/: FragmentShader.glsl  GlyphFragmentShader.glsl  GlyphVertexShader.glsl  VertexShader.glsl
Test/: Main.cpp
TestBin/Debug/: ProtoEngine.exp  ProtoEngine.lib
TestBin/Intermediates/Debug/Win64/: TestGame.exe.recipe  vc143.idb
TestBin/Intermediates/Debug/Win64/DebugWithGame/ProtoEngine/: ProtoEngine.dll.recipe  vc143.idb
TestBin/Intermediates/Debug/Win64/DebugWithGame/TestGame/: TestGame.exe.recipe  vc143.idb
TestBin/Intermediates/Release/: ProtoEngine.dll.recipe
TestBin/Intermediates/Release/Win64/: TestGame.exe.recipe
TestBin/Intermediates/Release/Win64/ReleaseWithGame/TestGame/: TestGame.exe.recipe
TestBin/Intermediates/ReleaseWithGame/: TestGame.exe.recipe
TestBin/Release/: ProtoEngine.exp
TestGame/: Main.cpp
include/: engine_exports.h  proto_engine.h  window.h
sandbox_source/: main.cc
source/: proto_engine.cc  window.cc
